# plymouth-theme

./: .gitignore  README.md  meson.build
debian/: changelog  control  install  postinst  postrm  prerm  rules
elementary/: create-frames.sh  elementary.plymouth  elementary.script
meson/: create_frames.py  post_install.py  postconf.py
